--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
         <meta charset="UTF-8">
-        <meta name="Viewport" content="width=device-w>
+        <meta name="Viewport" content="width=device-width ,initial scale="1.0">
         <title>Wassupppp</title>
 </head>
 <body>
