--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
         <meta charset="UTF-8">
         <meta name="Viewport" content="width=device-width ,initial scale="1.0">
         <title>Wassupppp</title>
+        <style>{
+                p = red
+                }
+        </style>
 </head>
 <body>
-        lorem7
+        <h1>Yooo broo</h1>
+        <p>I made this thing and now am doing <br>
+        everything i learnt in tha video.</p>
+        <a href="https://mantejjosan.github.io">This guy taught me something no can</a>
+        <p id="niga">Heheheheeh</p>
+                
 </body>
 </html>
