--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Yooo broo</h1>
         <p>I made this thing and now am doing <br>
         everything i learnt in tha video.</p>
-        <a href="https://mantejjosan.github.io">This guy taught me something no can</a>
+        <a href="https://mantejjosan.github.io/">This guy taught me something no can</a>
         <p id="niga">Heheheheeh</p>
                 
 </body>
