--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
         <meta charset="UTF-8">
         <meta name="Viewport" content="width=device-width ,initial scale="1.0">
         <title>Wassupppp</title>
-        <style>{
-                p = red
+        <style>
+               p{
+                 color: red;
+                }
+                #niga{
+                        color: green;
                 }
         </style>
 </head>
