--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="Viewport" content="width=device-width ,initial scale="1.0">
         <title>Wassupppp</title>
+        <link rel="stylesheet" href="style.css">
         <style>
                p{
                  color: red;
