--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </style>
 </head>
 <body>
+        <div id="main"> </div>
         <h1>Yooo broo</h1>
         <p>I made this thing and now am doing <br>
         everything i learnt in tha video.</p>
