--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
         </style>
 </head>
 <body>
-        <div id="main"> </div>
-        <h1>Yooo broo</h1>
-        <p>I made this thing and now am doing <br>
-        everything i learnt in tha video.</p>
+        <div id="main">
+                <h1>Yooo broo</h1>
+                <p>I made this thing and now am doing <br>
+                    everything i learnt in tha video.
+                </p>
         <a href="https://mantejjosan.github.io/">This guy taught me something no can</a>
         <p id="niga">Heheheheeh</p>
+        </div>
+        
                 
 </body>
 </html>
