--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>I made this thing and now am doing <br>
                     everything i learnt in tha video.
                 </p>
-        <a href="https://mantejjosan.github.io/">This guy taught me something no can</a>
+        <a href="https://mantejjosan.github.io/">This guy taught me something no one can</a>
         <p id="niga">Heheheheeh</p>
         </div>
         
