--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>Wassupppp</title>
         <link rel="stylesheet" href="style.css">
         <style>
+                h1{
+                        color: white;
+                }
                p{
                  color: red;
                 }
